welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:6: error: ')' expected but 'else' found.
	} else if ((10<=b && b<=20)&&(10>a | a>20) {
          ^